
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/fondo3"
    >

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="420dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/guatape2"
            android:alpha="0.9"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo"
            android:textSize="50dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Agua"
            android:textSize="22dp"
            android:layout_gravity="center"
            android:textColor="@color/black"/>

    </FrameLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Desguatape"
        android:gravity="center"
        android:textColor="@color/green"
        android:textSize="10dp"/>
    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:src="@drawable/guatapedes"/>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/LST">
    </ListView>


    </LinearLayout>
